--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@ nav{
 }
 
 #menuMobile{
-    width: 300px;
+    width: 18.75rem;
     height: 100vh;
 }
 
@@ -23,10 +23,10 @@ label{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 50px;
-    height: 50px;
+    width: 3.125rem;
+    height: 3.125rem;
     background-color: white;
-    box-shadow: 2px 1px 4px rgb(0 0 0 / 10%);
+    box-shadow: 0.125rem 0.063rem 0.25rem rgb(0 0 0 / 10%);
     border-radius: 0 0 0.5rem 0;
     overflow: hidden;
     top: 0;
@@ -63,17 +63,17 @@ label span:nth-child(2){
 
 #check-menu:checked ~ label span:nth-child(3){
     transform: rotate(22.5deg);
-    margin: 3px 0 0;
+    margin: 0.188rem 0 0;
     width: 60%;
     transition: all .4s ease-in-out;
 }
 
 #menu-block{
     position: absolute;
-    width: 250px;
+    width: 15.625rem;
     height: 100%;
     background-color: #fe8a33;
-    transform: translateX(-250px);
+    transform: translateX(-15.625rem);
     transition: all .1s ease;
     color: white;
     font-family: 'Open Sans', sans-serif;
@@ -85,7 +85,7 @@ label span:nth-child(2){
 
 @keyframes menu-mobile {
     to{
-        margin-left: 250px;
+        margin-left: 15.625rem;
     }
 }
 
@@ -102,7 +102,7 @@ label span:nth-child(2){
 #menu-block-title::after{
     content: "";
     width: 90%;
-    height: 1px;
+    height: 0.063rem;
     display: block;
     background-color: rgba(255, 255, 255, 0.6);
     margin: 1rem auto;
@@ -123,14 +123,14 @@ label span:nth-child(2){
 }
 
 #menu-block-items li:hover{
-    transform: translateX(15px) ;
+    transform: translateX(0.938rem) ;
     transition: all .2s linear;
 }
 
 #menu-block-footer::before{
     content: "";
     width: 90%;
-    height: 1px;
+    height: 0.063rem;
     display: block;
     background-color: rgba(255, 255, 255, 0.6);
     margin: 2rem auto;
@@ -142,7 +142,7 @@ label span:nth-child(2){
 
 #menu-block-footer a{
     color: rgba(255, 255, 255, 0.5);
-    font-size: 35px;
+    font-size: 2.188rem;
     text-decoration: none;
     margin: auto 0.5rem;
 }
@@ -168,11 +168,11 @@ header{
 
 header div{
     color: white;
-    text-shadow: 2px 2px black;
+    text-shadow: 0.125rem 0.125rem black;
     font-style: oblique;
     font-family: 'Open Sans', sans-serif;
     font-weight: 900;
-    stroke-width: 20px;
+    stroke-width: 1.25rem;
     text-align: center;
     padding-top: 15%;
 }
@@ -197,7 +197,7 @@ main{
     text-align: center;
     width: 100%;
     height: 100%;
-    padding-bottom: 10px;
+    padding-bottom: 0.625rem;
 }
 
 .containerSection h1{
@@ -235,7 +235,7 @@ main{
     width: 90%;
     margin: 1rem auto;
     padding-bottom: 2rem;
-    box-shadow: 0px 0px 30px 0px rgb(0, 0, 0, 0.5);
+    box-shadow: 0 0 1.875rem 0 rgb(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -245,9 +245,9 @@ main{
 
 .containerCalc input,select,button{
     border-radius: .3rem;
-    width: 200px;
-    height: 40px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    width: 12.5rem;
+    height: 2.5rem;
+    border: 0.063rem solid rgba(0, 0, 0, 0.3);
     font-size: 1rem;
     text-align: center;
 }
@@ -258,7 +258,7 @@ main{
 }
 
 .containerCalc input:hover, button:hover, select:hover {
-    border: 1px solid black;
+    border: 0.063rem solid black;
     transition: all .3s linear;
 }
 
@@ -302,14 +302,14 @@ main{
 #tableAtf{
     width: 90%;
     margin: 1.5rem auto;
-    border: 1px solid black;
+    border: 0.063rem solid black;
 }
 
 #tableAtf, 
 #tableAtf th, 
 #tableAtf td {
     vertical-align: middle;
-    border: 1px solid black;
+    border: 0.063rem solid black;
     height: 100%;
     padding: 1rem 0;
 }
@@ -332,7 +332,7 @@ main{
 }
 
 #backTop img{
-    height: 40px;
+    height: 2.5rem;
 }
 
 
